# strategygame

./: .gitignore  CMakeLists.txt  Documentation.doc  README.md
client/: .gitignore  CMakeLists.txt  CMakeLists.txt.user.2bc99f6  CMakeLists.txt.user.ab42405  README.md  client.cpp  client.h  client.ui  clientmodel.qmodel  field.h  game.cpp  game.h  landscape.h  landscapetypes.h  main.cpp  main_test.cpp  main_test.h  network.cpp  network.h  network.ui  unit.h  unittypes.h
client/diagram/: clientmodel.qmodel
client/source/: CMakeLists.txt  actionbutton.h  actionfield.cpp  actionfield.h  army.cpp  army.h  basenetwork.cpp  basenetwork.h  building.cpp  building.h  buildinglist.cpp  buildinglist.h  button.cpp  button.h  database.cpp  database.h  fraction.h  game.cpp  game.h  land.h  map.cpp  map.h  networkpackage.h  player.cpp  player.h  tile.cpp  tile.h  unit.cpp  unit.h  unitfactory.cpp  unitfactory.h  unitlist.cpp  unitlist.h  widget.cpp  widget.h
client/source/tilecontent/: CMakeLists.txt  building.cpp  building.h  buildingfactory.cpp  buildingfactory.h  buildinglist.cpp  buildinglist.h  land.cpp  land.h
client/source/tilecontent/units/: CMakeLists.txt  action.cpp  action.h  army.cpp  army.h  object.cpp  object.h  unit.cpp  unit.h  unitfactory.cpp  unitfactory.h  unitlist.cpp  unitlist.h
server/: README.md  action.h  basenetwork.cpp  basenetwork.h  client-server.pro  game.cpp  game.h  main.cpp  networkpackage.cpp  networkpackage.h  server.cpp  server.h  server.py  server.ui
server/Client/: Client.pro  client.cpp  client.h  main.cpp
temp/client-server/: basenetwork.cpp  basenetwork.h  client-server.pro  main.cpp  network.cpp  network.h  network.ui  networkpackage.cpp  networkpackage.h
uml/: README.md  Strategy.xmi
